Make a proper title and author

--- a/arctic-sea-ice/arctic_sea_ice.tex
+++ b/arctic-sea-ice/arctic_sea_ice.tex
@@ -1,11 +1,18 @@
 \documentclass{beamer}
 
+\usepackage[utf8]{inputenc}
+\usepackage[british]{babel}
+
+\title{Observing Arctic sea ice with Perl}
+\author{Paul Cochrane}
+
 \begin{document}
 
 \begin{frame}
-Watching Arctic sea ice with Perl
+    \titlepage
+\end{frame}
 
-Paul Cochrane
+
 \end{frame}
 
 \end{document}
