--- a/arctic-sea-ice/arctic_sea_ice.tex
+++ b/arctic-sea-ice/arctic_sea_ice.tex
@@ -12,6 +12,21 @@
     \titlepage
 \end{frame}
 
+\begin{frame}
+Arctic Feedback Dynamics Presentation by David Wasdell (Part 1)
+https://www.youtube.com/watch?v=AjZaFjXfLec
+at about 11:22 mentions exponential extrapolation and that 2015 all ice will
+disappear in summer.  The funny thing is, it does't look like it.
+
+sea ice extent data is available for free online, back to the 70's.  I can
+run the investigation similarly myself...
+\end{frame}
+
+
+\begin{frame}
+linear is obviously wrong
+exponential doesn't give as good a fit as 2nd order polynomial
+\end{frame}
 
 \end{frame}
 
