Add concluding notes to arctic sea ice talk

--- a/arctic-sea-ice/arctic_sea_ice.tex
+++ b/arctic-sea-ice/arctic_sea_ice.tex
@@ -28,6 +28,20 @@ linear is obviously wrong
 exponential doesn't give as good a fit as 2nd order polynomial
 \end{frame}
 
+\begin{frame}
+    \frametitle{Think!}
+    \begin{itemize}
+	\item Don't believe everything you read in blogs
+	\item Don't believe every video you see online
+	\item FFS don't believe me!
+	\item The tools are in \emph{your} hands
+	    \begin{itemize}
+		\item Perl, CPAN, freely available data, your brain
+	    \end{itemize}
+    \end{itemize}
 \end{frame}
+
+
+% XXX: "I want to believe" poster crossed out?
 
 \end{document}
