Add links to blog and slides repo

--- a/waking-up-with-perl6/waking-up-with-perl6.tex
+++ b/waking-up-with-perl6/waking-up-with-perl6.tex
@@ -10,6 +10,10 @@
 
 \title{Waking up with Perl 6}
 \author{Paul Cochrane (\texttt{ptc})}
+\institute{%
+\url{http://codeaffe.de}\\
+\url{https://github.com/paultcochrane/talks/waking-up-with-perl6}
+}
 
 \begin{document}
 
