Add notes about what to discuss in arctic sea ice talk

--- a/arctic-sea-ice/arctic_sea_ice.tex
+++ b/arctic-sea-ice/arctic_sea_ice.tex
@@ -91,6 +91,35 @@ exponential doesn't give as good a fit as 2nd order polynomial
 
 
 
-% XXX: "I want to believe" poster crossed out?
+% - working for DNPS
+% - did not only development, but also ran social media stuff
+% - in Twitter feed came across video about Arctic feedback dynamics
+% - video interesting and informative, however ...
+% - makes a prognosis about Arctic sea ice disappear in summer 2015
+% - uses data up to 2011 and sort of 2012, was uploaded on 2013, I saw the
+%   video in 2014 and, well, it's taken longer to prepare this talk than I
+%   would have liked
+% - Arctic sea ice wasn't gone in the northern summer of 2015, so... wtf?
+% - wtf is how one writes hä in English
+% - the data is freely available online (e.g. NSIDC), so why not check the
+%   results? (btw, verification of results is an important part of science)
+% - let's look at the presented results carefully: a linear fit of the
+%   1979-2011 data gives a zero crossing in 2075; "using the curves" and
+%   data from what looks like 1995-2012 (data point at 2012 looks too low),
+%   gives a zero crossing at 2015
+% - where do I get the data?
+% - it's in an archived form, and as near-real-time
+% - stich them together, plot
+% - we really want the minima, extract them
+% - what's the linear fit?
+% - what's the zero crossing of the linear fit?  (roughly 2073, so given
+%   errors a verification of result presented in talk)
+% - talk uses a fit-data-and-extrapolate approach; we can do that too
+% - a second order polynomial fits quite well
+
+
+% - take away message: don't believe everything!  Think critically!  Use
+%   your brain and the tools at hand.  The tools and data are often freely
+%   available.
 
 \end{document}
